terminator (0.98) precise; urgency=medium

  * New upstream release of 0.98
  * Sync up with Debian packaging
    + Update homepage
    + Revise copyright file
    + Use canonical URIs for Vcs-* fields
    + Update regular expression in watch

 -- Bryce Harrington <bryce@ubuntu.com>  Sat, 19 Sep 2015 18:41:57 -0700

terminator (0.97~ppa3) saucy; urgency=low

  * No-change upload for saucy

 -- Chris Jones <cmsj@tenshu.net>  Tue, 30 Apr 2013 10:10:49 +0100

terminator (0.97~ppa2) raring; urgency=low

  * No-change upload for raring

 -- Chris Jones <cmsj@tenshu.net>  Tue, 30 Apr 2013 10:09:08 +0100

terminator (0.97~ppa1) quantal; urgency=low

  * No-change upload for quantal

 -- Chris Jones <cmsj@tenshu.net>  Tue, 30 Apr 2013 10:08:19 +0100

terminator (0.97) precise; urgency=low

  * New upstream release of 0.97

 -- Chris Jones <cmsj@tenshu.net>  Tue, 30 Apr 2013 08:54:00 +0100

terminator (0.96ppa6) oneiric; urgency=low

  * No-change rebuild for oneiric PPA

 -- Chris Jones <cmsj@tenshu.net>  Wed, 28 Sep 2011 09:31:37 +0100

terminator (0.96ppa5) lucid; urgency=low

  * No-change rebuild for lucid PPA

 -- Chris Jones <cmsj@tenshu.net>  Wed, 28 Sep 2011 09:31:09 +0100

terminator (0.96ppa4) maverick; urgency=low

  * No-change rebuild for maverick PPA

 -- Chris Jones <cmsj@tenshu.net>  Wed, 28 Sep 2011 09:30:25 +0100

terminator (0.96ppa3) natty; urgency=low

  * Update packaging to include remotinator

 -- Chris Jones <cmsj@tenshu.net>  Wed, 28 Sep 2011 09:24:02 +0100

terminator (0.96ppa2) natty; urgency=low

  * No-change rebuild for natty

 -- Chris Jones <cmsj@tenshu.net>  Fri, 23 Sep 2011 22:02:58 +0100

terminator (0.96ppa1) maverick; urgency=low

  * No-change rebuild for maverick

 -- Chris Jones <cmsj@tenshu.net>  Fri, 23 Sep 2011 22:02:02 +0100

terminator (0.96) lucid; urgency=low

  * New upstream release of 0.96

 -- Chris Jones <cmsj@tenshu.net>  Fri, 23 Sep 2011 21:44:38 +0100

terminator (0.95ppa2) karmic; urgency=low
