@@ -1,0 +1,1 @@
+/usr/share/terminator/terminator /usr/bin/terminator
